cleaned up backend, merged welcome page with main page, adjusted user models. Will update APIs next

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "usrpwd_db",
+    "password": "test123",
+    "database": "vocabomatic",
     "host": "localhost",
     "dialect": "mysql"
   },
