First and last name added to sign up

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "S0cc3rM4n!69",
     "database": "usrpwd_db",
     "host": "localhost",
     "dialect": "mysql"
