member page displays the name of whoever is logged in

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "test123",
-    "database": "vocabomatic",
+    "password": null,
+    "database": "usrpwd_db",
     "host": "localhost",
     "dialect": "mysql"
   },
