--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
+    "cron": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
