--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
-    "cron": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "cron": "^1.7.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.3.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "sendgrid": "^6.4.0",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
