updated email config to get working

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-SENDGRID_API_KEY='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'
+SENDGRID_API_KEY='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'
+api_user="justincarlson7"
+api_key="2$$Pa$$word$$$$Pa$$word$$2"
