--- a/sendgrid.env
+++ b/sendgrid.env
@@ -1,1 +1,2 @@
-export SENDGRID_API_KEY='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'
+
+export SENDGRID_API_KEY='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'
