got email working

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-SENDGRID_API_KEY='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'
-api_user="justincarlson7"
-api_key="2$$Pa$$word$$$$Pa$$word$$2"
+mail_user="justinrobertcarlson@gmail.com"
+mail_pass="2$$Pa$$word$$$$Pa$$word$$2"
