--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "nodemailer": "^6.3.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
