--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "test123",
+    "password": "S0cc3rM4n!69",
     "database": "vocabomatic",
     "host": "localhost",
     "dialect": "mysql"
