--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.3.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.0",
